@@ -1,5 +1,7 @@
 package com.univus.app.lms.service;
 
+import com.univus.app.common.PaginateUtilRestApi;
+import com.univus.app.common.PaginateUtilRestApiRes;
 import com.univus.app.common.StorageService;
 import com.univus.app.lms.dto.LmsStuNoticeDto;
 import com.univus.app.lms.mapper.LmsStuNoticeMapper;
@@ -18,16 +20,16 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+/**
+ * SLM-009 학생 공지사항 열람 ServiceImpl.
+ * 화면 = 수강 과목 1개 선택 → 그 과목 공지를 서버 페이지네이션(클라 slice 없음, 교수 PLM-005 미러).
+ * 소유권: 본인 수강(DRP 제외) 강의의 공지만 — 매퍼 ENROLLMENT INNER JOIN으로 IDOR 차단.
+ */
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class LmsStuNoticeServiceImpl implements LmsStuNoticeService {
 
-    private static final Map<String, String> TERM_LABELS = Map.of(
-            "SM1", "1학기",
-            "SMR", "여름 계절",
-            "SM2", "2학기",
-            "WNT", "겨울 계절");
     private static final String ANNOUNCEMENT_SUBDIR =
             "lms" + File.separator + "professor" + File.separator + "announcement";
     private static final String ATTACHMENT_DOWNLOAD_PATH =
@@ -41,14 +43,28 @@ public class LmsStuNoticeServiceImpl implements LmsStuNoticeService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<LmsStuNoticeDto.NoticeResDto> getNotices(Long memberId) {
+    public List<LmsStuNoticeDto.LectureResDto> getLectures(Long memberId) {
         Long lmsPrfId = requireStudentLmsPrfId(memberId);
-        List<LmsStuNoticeDto.NoticeResDto> notices = lmsStuNoticeMapper.selectStudentNotices(lmsPrfId)
-                .stream()
+        return lmsStuNoticeMapper.selectEnrolledLectures(lmsPrfId).stream()
+                .map(this::toLectureResDto)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public PaginateUtilRestApiRes<LmsStuNoticeDto.NoticeResDto> getNotices(
+            Long memberId, Long lecId, int page, int size) {
+        Long lmsPrfId = requireStudentLmsPrfId(memberId);
+        int safePage = PaginateUtilRestApi.normalizePage(page);
+        int safeSize = PaginateUtilRestApi.normalizeSize(size);
+        long total = lmsStuNoticeMapper.countNotices(lmsPrfId, lecId);
+        List<LmsStuNoticeDto.NoticeResDto> notices = lmsStuNoticeMapper.selectNoticesPaged(
+                        lmsPrfId, lecId, PaginateUtilRestApi.offset(safePage, safeSize), safeSize).stream()
                 .map(this::toNoticeResDto)
-                .toList();
+                .collect(Collectors.toList());
         attachNoticeAttachments(notices);
-        return notices;
+        log.info("학생 공지 조회 lmsPrfId={} lecId={} page={} size={} total={}", lmsPrfId, lecId, safePage, safeSize, total);
+        return PaginateUtilRestApi.of(notices, total, safePage, safeSize);
     }
 
     @Override
@@ -62,24 +78,23 @@ public class LmsStuNoticeServiceImpl implements LmsStuNoticeService {
         }
 
         String directoryPath = uploadRoot + File.separator + ANNOUNCEMENT_SUBDIR;
-        log.info("Student notice attachment download lmsPrfId={} attachmentId={}", lmsPrfId, attachmentId);
+        log.info("학생 공지 첨부 다운로드 lmsPrfId={} attachmentId={}", lmsPrfId, attachmentId);
         return storageService.downloadFile(directoryPath, file.getTrnFileName(), file.getFileName());
     }
 
+    /* 현재 페이지 공지들의 유효(ACT) 첨부를 조회해 각 NoticeResDto에 그룹핑 (빈 목록이면 첨부 조회 생략) */
     private void attachNoticeAttachments(List<LmsStuNoticeDto.NoticeResDto> notices) {
         if (notices.isEmpty()) {
             return;
         }
-
         List<Long> noticeIds = notices.stream()
                 .map(LmsStuNoticeDto.NoticeResDto::getNoticeId)
-                .toList();
+                .collect(Collectors.toList());
         Map<Long, List<LmsStuNoticeDto.NoticeAttachmentResDto>> grouped =
                 lmsStuNoticeMapper.selectActiveAttachmentsByNoticeIds(noticeIds).stream()
                         .collect(Collectors.groupingBy(
                                 LmsStuNoticeDto.AttachmentRow::getNoticeId,
                                 Collectors.mapping(this::toAttachmentResDto, Collectors.toList())));
-
         for (LmsStuNoticeDto.NoticeResDto notice : notices) {
             notice.setAttachments(grouped.getOrDefault(notice.getNoticeId(), Collections.emptyList()));
         }
@@ -93,23 +108,25 @@ public class LmsStuNoticeServiceImpl implements LmsStuNoticeService {
         return lmsPrfId;
     }
 
+    private LmsStuNoticeDto.LectureResDto toLectureResDto(LmsStuNoticeDto.LectureRow row) {
+        return LmsStuNoticeDto.LectureResDto.builder()
+                .lecId(row.getLecId())
+                .courseName(row.getCourseName())
+                .lecSection(row.getLecSection())
+                .semYear(row.getSemYear())
+                .semTerm(row.getSemTerm())
+                .build();
+    }
+
     private LmsStuNoticeDto.NoticeResDto toNoticeResDto(LmsStuNoticeDto.NoticeRow row) {
         return LmsStuNoticeDto.NoticeResDto.builder()
                 .noticeId(row.getNoticeId())
-                .semYear(row.getSemYear())
-                .semTerm(row.getSemTerm())
-                .semesterLabel(semesterLabel(row.getSemYear(), row.getSemTerm()))
-                .lecId(row.getLecId())
-                .lecSection(row.getLecSection())
-                .courseName(row.getCourseName())
-                .courseFullName(row.getCourseFullName() == null ? row.getCourseName() : row.getCourseFullName())
                 .lecAnnTitle(row.getLecAnnTitle())
                 .author(formatAuthor(row.getAuthor()))
                 .authorImageUrl(row.getAuthorImageUrl())
                 .professorLmsPrfId(row.getProfessorLmsPrfId())
                 .lecAnnRegDate(row.getLecAnnRegDate())
                 .listDate(row.getListDate())
-                .featured(false)
                 .lecAnnContent(row.getLecAnnContent())
                 .attachments(Collections.emptyList())
                 .build();
@@ -122,10 +139,6 @@ public class LmsStuNoticeServiceImpl implements LmsStuNoticeService {
                 .fileSize(row.getFileSize())
                 .downloadUrl(String.format(ATTACHMENT_DOWNLOAD_PATH, row.getAttachmentId()))
                 .build();
-    }
-
-    private static String semesterLabel(Integer year, String termCode) {
-        return year + "년 " + TERM_LABELS.getOrDefault(termCode, termCode);
     }
 
     private static String formatAuthor(String author) {
